--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "devDependencies": {
         "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
-        "@tailwindcss/vite": "^4.0.0",
-        "@vitejs/plugin-vue": "^5.0.0",
+        "@tailwindcss/vite": "^4.1.13",
+        "@vitejs/plugin-vue": "^6.0.1",
         "autoprefixer": "^10.4.12",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.2.1",
+        "tailwindcss": "^4.1.13",
         "vite": "^7.0.4",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@mdi/font": "^7.4.47",
+        "vite-plugin-vuetify": "^2.1.2",
+        "vuetify": "^3.9.7"
     }
 }
