--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dependencies": {
         "@mdi/font": "^7.4.47",
         "vite-plugin-vuetify": "^2.1.2",
-        "vuetify": "^3.9.7"
+        "vue3-toastify": "^0.2.8",
+        "vuetify": "^3.9.7",
+        "ziggy-js": "^2.5.3"
     }
 }
