--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@mdi/font": "^7.4.47",
+        "moment": "^2.30.1",
         "vite-plugin-vuetify": "^2.1.2",
         "vue3-toastify": "^0.2.8",
         "vuetify": "^3.9.7",
