--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^4.1.13",
         "vite": "^7.0.4",
+        "vite-plugin-vue-devtools": "^8.0.3",
         "vue": "^3.4.0"
     },
     "dependencies": {
